--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/day6/main.go"
+            "program": "${workspaceFolder}/2022/06/6.go"
         }
     ]
 }
