--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,13 @@
-{
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "Launch Package",
-			"type": "go",
-			"request": "launch",
-			"mode": "auto",
-			"program": "${workspaceFolder}/playground/image_pkg.go"
-		}
-	]
-}
+
+	{
+		"version": "0.2.0",
+		"configurations": [
+			{
+				"name": "Launch Package",
+				"type": "go",
+				"request": "launch",
+				"mode": "auto",
+				"program": "${workspaceFolder}/2022/09/9.go"
+			}
+		]
+	}
