--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,38 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "(gdb) Launch",
+			"preLaunchTask": "(gdb) Build",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/cpp_solution.out",
+			"args": [
+				"${workspaceFolder}/2023/01/input.txt"
+			],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
+		},
+		{
 			"name": "Launch Package",
 			"type": "go",
 			"request": "launch",
 			"mode": "auto",
-			"program": "${workspaceFolder}/2022/11/11.go"
+			"program": "${workspaceFolder}/2022/12/12.go"
 		}
 	]
 }
